--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -1,19 +1,22 @@
-.form {
+.forms {
   display: flex;
   justify-content: center;
-  margin-top: 56px;
+  margin: 56px 40px 0;
+  flex-wrap: wrap;
+  gap: 24px;
 }
 
-.form h2 {
+.forms form{
+  background-color: #F2F2F2;
+  border-radius: 24px;
+  padding: 48px;
+  flex: 1;
+  box-shadow: 8px 8px 16px rgba(0, 0, 0, 0.1);
+}
+
+.forms form h2 {
   font-size: 48px;
   font-family: 'Prata';
   font-weight: normal;
 }
 
-.form form{
-  width: 75%;
-  background-color: #F2F2F2;
-  border-radius: 24px;
-  padding: 48px;
-  box-shadow: 8px 8px 16px rgba(0, 0, 0, 0.1);
-}
