adding some responsivity
responsivity on footer

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,14 +1,14 @@
 .footer {
   background-color: #6278f7;
-  padding: 40px;
+  padding: 10px 40px;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
-  height: 100px;
   margin-top: 56px;
   background-image: url('/public/images/fundo.png');
   background-size: cover;
-  background-position: center;
+  gap: 48px;
+  background-position: center; 
 }
 
 .footer h5 {
@@ -19,8 +19,24 @@
 .footer ul {
   display: inline-flex;
   list-style: none;
+  gap: 10px;
+  padding: 0px;
 }
 
 .footer ul li {
   padding: 16px;
+}
+
+@media (max-width: 756px) {
+  .footer {
+    flex-direction: column; 
+  }
+
+  .footer ul {
+    justify-content: center; 
+  }
+
+  .footer section {
+    margin-top: 10px; 
+  }
 }
